--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <section class="weather">
-    <h1 class="weather__title">Прогноз погоды</h1>
+    <h1 class="weather__title">Погода</h1>
 
     <form class="weather__form">
       <input class="weather__input" type="text" placeholder="Введите город">
